# photo-picker

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
LICENSES/: README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  pipeline.rs
crates/core/src/cache/: mod.rs
crates/core/src/features/: full.rs  hash.rs  mod.rs
crates/core/src/group/: mod.rs  stage_a.rs  stage_b.rs  unionfind.rs
crates/core/src/ingest/: decoder.rs  exif.rs  mod.rs  raw_preview.rs  scanner.rs
crates/core/src/models/: cache.rs  clip.rs  mod.rs  pool.rs  registry.rs
crates/core/src/output/: html.rs  mod.rs  plan.rs  report.rs  thumb_cache.rs
crates/core/src/scoring/: aesthetic.rs  composition.rs  exposure.rs  face.rs  face_yunet.rs  mod.rs  noise.rs  scene.rs  sharpness.rs  wb.rs
crates/core/src/vlm/: anthropic.rs  mod.rs  openai.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  assets.rs  handlers.rs  lib.rs  main.rs  state.rs
crates/server/static/: index.html
packaging/: README.md  run.bat  run.sh
scripts/: fetch_models.sh  fetch_onnxruntime.sh  make_fixtures.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: ApplyBar.tsx  BrowseDialog.tsx  ErrorBoundary.tsx  ExportDialog.tsx  FieldHelp.tsx  GroupCard.tsx  GroupDetailDialog.tsx  LanguageToggle.tsx  Lightbox.tsx  Motion.tsx  PresetCard.tsx  RunCard.tsx  RunDetailDialog.tsx  ScanForm.tsx  SettingsDialog.tsx  SliderInput.tsx  TaskConfigDialog.tsx  ThemeToggle.tsx  Thumb.tsx
web/src/lib/: api.ts  i18n.ts  presets.ts  selection.ts  types.ts  vlmStore.ts
