[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/server",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.80"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/mio/photo-pick"

[workspace.dependencies]
image             = "0.25"
image_hasher      = "3"
fast_image_resize = "5"
kamadak-exif      = "0.6"
walkdir           = "2"
rayon             = "1"
chrono            = { version = "0.4", features = ["serde"] }
sha2              = "0.10"
uuid              = { version = "1", features = ["v4", "serde"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
thiserror         = "2"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap              = { version = "4", features = ["derive", "env"] }
anyhow            = "1"
indicatif         = "0.17"
# ML stack (M3+)
ort               = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "copy-dylibs"] }
ndarray           = "0.17"
ureq              = { version = "3", default-features = false, features = ["rustls"] }
dirs              = "6"
hex               = "0.4"

[profile.release]
lto           = "thin"
codegen-units = 1
opt-level     = 3
