[package]
name         = "photo-pick-core"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[lib]
name = "photo_pick_core"
path = "src/lib.rs"

[features]
default  = ["onnx"]
# ONNX-backed models (CLIP embeddings + YuNet faces). Disable to build/test the
# pure-Rust pipeline (ingest, scoring, grouping, cache) without linking the
# onnxruntime static library.
onnx     = ["dep:ort", "dep:ndarray"]
cuda     = ["onnx"]
coreml   = ["onnx"]
directml = ["onnx"]

[[bin]]
name = "clip_smoke"
path = "src/bin/clip_smoke.rs"
required-features = ["onnx"]

[dev-dependencies]
tempfile = "3"

[dependencies]
image             = { workspace = true }
image_hasher      = { workspace = true }
kamadak-exif      = { workspace = true }
walkdir           = { workspace = true }
rayon             = { workspace = true }
chrono            = { workspace = true }
sha2              = { workspace = true }
uuid              = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
ort               = { workspace = true, optional = true }
ndarray           = { workspace = true, optional = true }
ureq              = { workspace = true }
dirs              = { workspace = true }
hex               = { workspace = true }
base64            = { workspace = true }
rusqlite          = { workspace = true }
bytemuck          = { workspace = true }
