[package]
name         = "photo-pick-server"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[[bin]]
name = "photo-pick-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
photo-pick-core    = { path = "../core" }
axum               = { workspace = true }
tokio              = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
dirs               = { workspace = true }
trash              = { workspace = true }
rust-embed         = { workspace = true }
mime_guess         = { workspace = true }
