[package]
name         = "photo-pick-server"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[[bin]]
name = "photo-pick-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
# Pass-through so a release build can ask core to download the onnxruntime
# static lib for the build target (CI cross-platform builds). Default builds
# inherit core's default `onnx` feature + the vendored lib.
onnx-download = ["photo-pick-core/onnx-download"]

[dependencies]
photo-pick-core    = { path = "../core", default-features = true }
axum               = { workspace = true }
tokio              = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
dirs               = { workspace = true }
trash              = { workspace = true }
rust-embed         = { workspace = true }
mime_guess         = { workspace = true }
tokio-stream       = { workspace = true }
futures-util       = { workspace = true }
